			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

16-Sep-2000
~~~~~~~~~~~
Pinboard icons can also be renamed.
Pinboard and panel icons can have '~' or '~/' at the start of their
pathnames - this should make it easier to create a system-wide default
panel or pinboard with icons relative to the user's home directory.

14-Sep-2000
~~~~~~~~~~~
Panel icons can now be renamed (suggested by Ewan Mac Mahon).

13-Sep-2000
~~~~~~~~~~~
Changing the toolbar options affects existing windows, not just new ones.
Removed the 'Size Bars' display style and replaced it with 'Permissions',
'Type' and 'Times' styles.

12-Sep-2000
~~~~~~~~~~~
With items that spread over their normal width because they're on the
edge of the window, clicking on the extra bit now works.

Added a size limit of 400K on application icons. This is to prevent
someone trying to crash the filer by linking /tmp/MyApp/AppIcon.xpm
to some huge file!

Dragging an item with the middle button when none are selected unselects
the item after the drag.

Added 'Show Location' feature for pinboard and panels - opens a directory
showing where the file really is.

11-Sep-2000
~~~~~~~~~~~
Allowed items in the far right column to spread right to the edge of the
window. Fixed a bug which prevented Delete from working if there was
no pinboard.

10-Sep-2000
~~~~~~~~~~~
Deleting items first checks if it will affect the pinboard or panel. A
warning is displayed if so.

Upgraded the query dialog (from ROX-Session) - looks nicer.

09-Sep-2000
~~~~~~~~~~~
'Unique filer windows' option now has no effect while the spring open
feature is active (spotted by Andrew Booker). Also, when opening a new
window, the old window is destroyed and a new one created (rather than
reusing the old one). This ensures that the new window appears in the
right place.

When a drag from the pinboard or a filer window ends, the selection is
only cleared if the icon was selected by starting the drag. Thus, it now
works like the panels.
