@@ -44,44 +44,53 @@ static void rename_activate(GtkWidget *dialog);
 
 /* Opens a box allowing the user to change the name of a pinned icon.
  * If 'widget' is destroyed then the box will close.
- * If the user chooses OK then the callback is called with the new name.
+ * If the user chooses OK then the callback is called once the icon's
+ * name, src_path and path fields have been updated and the item field
+ * restatted.
  */
-void show_rename_box(GtkWidget *widget,
-		     guchar *old_name,
-		     RenameFn callback,
-		     gpointer data)
+void show_rename_box(GtkWidget *widget, Icon *icon, RenameFn callback)
 {
 	GtkWidget	*dialog, *hbox, *vbox, *label, *entry, *button;
 
 	dialog = gtk_window_new(GTK_WINDOW_DIALOG);
-	gtk_window_set_title(GTK_WINDOW(dialog), _("Rename Item"));
+	gtk_window_set_title(GTK_WINDOW(dialog), _("Edit Icon"));
 	gtk_container_set_border_width(GTK_CONTAINER(dialog), 10);
 
 	vbox = gtk_vbox_new(FALSE, 4);
 	gtk_container_add(GTK_CONTAINER(dialog), vbox);
 	
-	label = gtk_label_new(_("Change the name displayed next to "
-				"the pinned icon (the file itself is "
-				"NOT renamed).")),
-	gtk_label_set_line_wrap(GTK_LABEL(label), TRUE);
+	label = gtk_label_new(_("Clicking the icon opens:"));
 	gtk_box_pack_start(GTK_BOX(vbox), label, TRUE, TRUE, 0);
 
 	entry = gtk_entry_new();
-	gtk_box_pack_start(GTK_BOX(vbox), entry, FALSE, TRUE, 2);
-	gtk_entry_set_text(GTK_ENTRY(entry), old_name);
+	gtk_box_pack_start(GTK_BOX(vbox), entry, TRUE, FALSE, 2);
+	gtk_entry_set_text(GTK_ENTRY(entry), icon->src_path);
+	gtk_object_set_data(GTK_OBJECT(dialog), "new_path", entry);
+	gtk_signal_connect_object(GTK_OBJECT(entry), "activate",
+			rename_activate, GTK_OBJECT(dialog));
+
+	gtk_box_pack_start(GTK_BOX(vbox), gtk_hseparator_new(), TRUE, TRUE, 2);
+
+	label = gtk_label_new(_("The text displayed under the icon is:"));
+	gtk_box_pack_start(GTK_BOX(vbox), label, TRUE, TRUE, 0);
+	entry = gtk_entry_new();
+	gtk_box_pack_start(GTK_BOX(vbox), entry, TRUE, FALSE, 2);
+	gtk_entry_set_text(GTK_ENTRY(entry), icon->item.leafname);
 	gtk_editable_select_region(GTK_EDITABLE(entry), 0, -1);
 	gtk_widget_grab_focus(entry);
+	gtk_object_set_data(GTK_OBJECT(dialog), "new_name", entry);
+	gtk_signal_connect_object(GTK_OBJECT(entry), "activate",
+			rename_activate, GTK_OBJECT(dialog));
 	
 	gtk_signal_connect_object_while_alive(GTK_OBJECT(widget),
 			"destroy",
 			GTK_SIGNAL_FUNC(gtk_widget_destroy),
 			GTK_OBJECT(dialog));
 
-	gtk_object_set_data(GTK_OBJECT(dialog), "new_name", entry);
-	gtk_object_set_data(GTK_OBJECT(dialog), "callback_data", data);
+	gtk_object_set_data(GTK_OBJECT(dialog), "callback_icon", icon);
 	gtk_object_set_data(GTK_OBJECT(dialog), "callback_fn", callback);
-	gtk_signal_connect_object(GTK_OBJECT(entry), "activate",
-			rename_activate, GTK_OBJECT(dialog));
+
+	gtk_box_pack_start(GTK_BOX(vbox), gtk_hseparator_new(), TRUE, TRUE, 2);
 
 	hbox = gtk_hbox_new(TRUE, 4);
 	gtk_box_pack_start(GTK_BOX(vbox), hbox, FALSE, TRUE, 0);
@@ -137,27 +146,47 @@ guchar *icon_convert_path(guchar *path)
 
 static void rename_activate(GtkWidget *dialog)
 {
-	GtkWidget *entry;
+	GtkWidget *entry, *src;
 	RenameFn callback;
-	gpointer data;
-	guchar	*new_name;
+	Icon	*icon;
+	guchar	*new_name, *new_src;
 	
 	entry = gtk_object_get_data(GTK_OBJECT(dialog), "new_name");
-	data = gtk_object_get_data(GTK_OBJECT(dialog), "callback_data");
+	icon = gtk_object_get_data(GTK_OBJECT(dialog), "callback_icon");
 	callback = gtk_object_get_data(GTK_OBJECT(dialog), "callback_fn");
+	src = gtk_object_get_data(GTK_OBJECT(dialog), "new_path");
 
-	g_return_if_fail(callback != NULL && entry != NULL);
+	g_return_if_fail(callback != NULL &&
+			 entry != NULL &&
+			 src != NULL &&
+			 icon != NULL);
 
 	new_name = gtk_entry_get_text(GTK_ENTRY(entry));
+	new_src = gtk_entry_get_text(GTK_ENTRY(src));
+	
 	if (*new_name == '\0')
 		report_error(PROJECT,
-			_("The name must contain at least one character!"));
+			_("The label must contain at least one character!"));
+	else if (*new_src == '\0')
+		report_error(PROJECT,
+			_("The location must contain at least one character!"));
 	else if (strpbrk(new_name, "<>"))
 		report_error(PROJECT,
 			_("Sorry, but the name must not contain < or >"));
 	else
 	{
-		callback(new_name, data);
+		GdkFont	*font = icon->widget->style->font;
+
+		g_free(icon->item.leafname);
+		g_free(icon->src_path);
+		g_free(icon->path);
+		icon->src_path = g_strdup(new_src);
+		icon->path = icon_convert_path(new_src);
+		icon->item.leafname = g_strdup(new_name);
+		icon->item.name_width = gdk_string_width(font, new_name);
+		dir_restat(icon->path, &icon->item);
+
+		callback(icon);
 		gtk_widget_destroy(dialog);
 	}
 }
