@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+17-Sep-2000
+~~~~~~~~~~~
+Changed 'Rename Item' to 'Edit Icon' and allowed changing the path that
+the icon points to as well as its name.
+
 16-Sep-2000
 ~~~~~~~~~~~
 Pinboard icons can also be renamed.
